--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
   --color-active-button: #188ce8;
   --color-background-hero-title: #2f303a;
   --color-portfolio-background-button: #f5f4fa;
-  --color-address-: #FFFFFF99; 
+  --color-address-: #ffffff99;
 }
 
 .html {
@@ -38,12 +38,12 @@ img {
   height: auto;
 }
 
-h1, 
-h2, 
-h3, 
-h4, 
-h5, 
-h6, 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
 p {
   margin-top: 0;
 }
@@ -57,14 +57,13 @@ p {
 /* Header */
 
 .page-header {
-  border-bottom: 1px solid #ECECEC;
+  border-bottom: 1px solid #ececec;
 }
 
 .head-container {
   display: flex;
   align-items: center;
 }
-
 
 /* Навигация хедера */
 
@@ -76,7 +75,7 @@ p {
   display: block;
   padding-top: 24px;
   padding-bottom: 25px;
-  
+
   color: var(--color-primary);
   font-family: "raleway", "sans-serif";
   text-decoration: none;
@@ -124,7 +123,7 @@ p {
 
 .hed-adrr {
   display: flex;
-  margin-left: auto
+  margin-left: auto;
 }
 
 .hed-adrr .hed-adrr-item + .hed-adrr-item {
@@ -268,8 +267,7 @@ p {
 
 .list-activites {
   display: flex;
-  justify-content:space-between;
-  
+  justify-content: space-between;
 }
 
 .list-item-activites {
@@ -338,7 +336,6 @@ p {
 
 .logo-link-footer {
   display: block;
-  
 
   color: var(--color-text-button);
   font-family: "raleway", "sans-serif";
@@ -359,7 +356,6 @@ p {
   letter-spacing: 0.03em;
   line-height: 1.71;
 }
-
 
 .address:hover {
   color: var(--color-background-button);
@@ -402,7 +398,6 @@ p {
   justify-content: center;
 }
 
-
 .button-portfolio {
   margin-left: 8px;
   display: inline-block;
@@ -441,7 +436,7 @@ p {
 }
 
 .list-portholio-item {
-  border: 1px solid #EEEEEE;
+  border: 1px solid #eeeeee;
 }
 
 .list-porth-item-cont {
